[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/hacking/randomness/randomness.gd" type="Script" id=1]
[ext_resource path="res://assets/8-bit-hud.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/hacking/learning_with_computers .mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/Bittypix Monospace.otf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/hacking/matrix.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 19
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="RootContainer" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="HBoxContainer" type="HBoxContainer" parent="RootContainer"]
margin_right = 1280.0
margin_bottom = 720.0
alignment = 1

[node name="ControlsContainer" type="VBoxContainer" parent="RootContainer/HBoxContainer"]
margin_left = 384.0
margin_right = 896.0
margin_bottom = 720.0
rect_min_size = Vector2( 258, 0 )
rect_pivot_offset = Vector2( -1068, -270 )
size_flags_horizontal = 6
alignment = 1

[node name="PromptLabel" type="RichTextLabel" parent="RootContainer/HBoxContainer/ControlsContainer"]
margin_top = 313.0
margin_right = 512.0
margin_bottom = 345.0
grow_horizontal = 2
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
fit_content_height = true

[node name="ProgressLabel" type="RichTextLabel" parent="RootContainer/HBoxContainer/ControlsContainer"]
margin_top = 349.0
margin_right = 512.0
margin_bottom = 381.0
grow_horizontal = 2
rect_min_size = Vector2( 512, 0 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
fit_content_height = true

[node name="FingerprintLabel" type="RichTextLabel" parent="RootContainer/HBoxContainer/ControlsContainer"]
margin_top = 385.0
margin_right = 512.0
margin_bottom = 407.0
grow_horizontal = 2
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 7
size_flags_vertical = 5
theme = SubResource( 3 )
bbcode_enabled = true
fit_content_height = true
scroll_following = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 3 )
volume_db = -5.0
autoplay = true
